--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-html {
+html, body, div {
 
     margin: 0px;
     padding: 0px;
+}
+
+html {
+
     min-height: 100%;
     background-color: #151515;
     background: linear-gradient(#151515, #3e3e3e);
@@ -11,8 +15,6 @@ html {
 
 body {
 
-    margin: 0px;
-    padding: 0px;
     color: #999999;
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
