--- a/style.css
+++ b/style.css
@@ -1,31 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
 
-html, body, div {
+html, body {
 
     margin: 0px;
-    padding: 0px;
-}
-
-html {
-
     min-height: 100%;
-    background-color: #151515;
-    background: linear-gradient(#151515, #3e3e3e);
 }
 
 body {
 
     color: #999999;
-    font-family: "Montserrat", sans-serif;
+    background-color: #151515;
+    background: linear-gradient(#151515, #3e3e3e);
+    font-family: "Josefin Sans", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 400;
+    font-weight: 300;
     font-style: normal;
+    font-size: 20px;
     text-align: center;
 }
 
 a {
 
-    color: #bbbbbb;
+    color: #cccccc;
     text-decoration: none;
     transition: color 0.5s;
 }
@@ -37,6 +33,6 @@ a:hover {
 
 #icon {
 
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
 }
