--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
-
 html, body {
 
     margin: 0px;
@@ -43,7 +41,7 @@ a {
 
 a:hover {
 
-    color: #cccccc;
+    color: #ff0022;
 }
 
 #icon {
