--- a/style.css
+++ b/style.css
@@ -57,10 +57,16 @@ a:hover {
     height: 100px;
 }
 
+#appstore {
+
+    margin-top: 10px;
+    height: 100px;
+}
+
 .links {
 
     margin: 10px;
-    font-size: 15px;
+    font-size: 16px;
 }
 
 @media (min-width: 700px) and (min-height: 500px) {
