--- a/style.css
+++ b/style.css
@@ -1,32 +1,28 @@
 html, body {
-
     margin: 0px;
     min-height: 100%;
 }
 
 body {
-
     color: #aaaaaa;
     background-color: #151515;
     background: linear-gradient(#151515, #3e3e3e);
-    font-family: "Josefin Sans", sans-serif;
+    font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 300;
+    font-weight: 400;
     font-style: normal;
     font-size: 20px;
     text-align: center;
 }
 
 h1 {
-
     margin: 0px;
     color: #ffffff;
+    font-weight: 700;
     font-size: 30px;
-    font-weight: 300;
 }
 
 h2 {
-
     margin: 0px;
     margin-bottom: 5px;
     color: #dddddd;
@@ -35,7 +31,6 @@ h2 {
 }
 
 h3 {
-
     margin: 0px;
     margin-top: 10px;
     color: #aaaaaa;
@@ -44,32 +39,26 @@ h3 {
 }
 
 p {
-
     margin: 5px;
     max-width: 450px;
     display: inline-block;
 }
 
 a {
-
     color: #ffffff;
     text-decoration: none;
     transition: color 0.5s;
 }
 
 a:hover {
-
     color: #ff0022;
 }
 
 #icon {
-
-    width: 100px;
-    height: 100px;
+    font-size: 70px;
 }
 
 #slideshow {
-
     width: 320px;
     height: 635px;
     position: relative;
@@ -78,7 +67,6 @@ a:hover {
 }
 
 .screenshots {
-
     position: absolute;
     top: 0px;
     left: 0px;
@@ -87,7 +75,6 @@ a:hover {
 }
 
 @keyframes crossfade {
-    
     0% { opacity: 1; }
     20% { opacity:1; }
     35%{ opacity: 0; }
@@ -96,57 +83,46 @@ a:hover {
 }
 
 #screenshot1 {
-
     animation:crossfade 15s 0s infinite;
 }
 
 #screenshot2 {
-
     animation:crossfade 15s 3s infinite;
 }
 
 #screenshot3 {
-
     animation:crossfade 15s 6s infinite;
 }
 
 #signature {
-
     font-size: 15px;
     margin-bottom: 20px;
 
     a {
-
         color: #aaaaaa;
     }
 
     a:hover {
-
         color: #ffffff;
     }
 }
 
 #appstore {
-
     height: 100px;
 }
 
 .links {
-
     margin: 15px;
     margin-bottom: 20px;
     font-size: 16px;
 }
 
 @media (min-width: 700px) and (min-height: 500px) {
-
     h1 {
-
         font-size: 50px;
     }
 
     .links {
-    
         font-size: 18px;
     }
 }
