--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
 body {
     color: #aaaaaa;
     background-color: #151515;
-    background: linear-gradient(#151515, #3e3e3e);
+    background: linear-gradient(#151515, #202020);
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
